--- a/render.yaml
+++ b/render.yaml
@@ -2,15 +2,13 @@ services:
   - type: web
     name: metabase
     env: docker
-    repo: https://github.com/render-examples/metabase.git # optional
-    plan: standard # ensure that metabase has at least 2GB of RAM (defaults to starter)
+    repo: https://github.com/render-examples/metabase.git # opcional
+    plan: starter # cambia el plan a starter (1GB de RAM)
     autoDeploy: false
     envVars:
       - key: MB_DB_CONNECTION_URI
-        fromDatabase:
-          name: elephant
-          property: connectionString
+        value: "postgres://admin:3sKi4wWanO9CoaGu3OKB0HgtFow11VTT@dpg-chehs2ak728m8k6h8ft0-a.ohio-postgres.render.com:5432/insomniadb_73w9"
 databases:
   - name: elephant
-    databaseName: metabasedb
-    ipAllowList: [] # only allow internal connections
+    databaseName: insomniadb_73w9
+    ipAllowList: [] # solo permite conexiones internas
