--- a/render.yaml
+++ b/render.yaml
@@ -9,6 +9,6 @@ services:
       - key: MB_DB_CONNECTION_URI
         value: "postgres://admin:3sKi4wWanO9CoaGu3OKB0HgtFow11VTT@dpg-chehs2ak728m8k6h8ft0-a.ohio-postgres.render.com:5432/insomniadb_73w9"
 databases:
-  - name: elephant
+  - name: InsomniaDB
     databaseName: insomniadb_73w9
     # ipAllowList: [] # solo permite conexiones internas
